Adding docker and K8S changes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,3 +56,9 @@ simulator:
   fixed-rate-ms: 2000
   max-records: 100
   allow-spikes: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
