--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,21 +9,20 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Build Spring Boot App
-      run: ./mvnw clean package -DskipTests
+      - name: Build Spring Boot App
+        run: ./mvnw clean package -DskipTests
 
-    - name: Build Docker Image
-      run: docker build -t iot-app:latest .
+      - name: Build Docker Image
+        run: docker build -t iot-app:latest .
 
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f helm-releases/dev.yml
+      - name: Deploy to Kubernetes
+        run: kubectl apply -f helm-releases/dev.yml
