--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Echo test step
+        run: echo "Hello from the runner machine!"
+
       - name: Checkout code
         uses: actions/checkout@v4
 
