--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,13 @@
-name: Build and Deploy Spring Boot IoT App
+name: Test Runner Connection
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  test-runner:
     runs-on: self-hosted
 
     steps:
-      - name: Echo test step
-        run: echo "Hello from the runner machine!"
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build Spring Boot App
-        run: ./mvnw clean package -DskipTests
-
-      - name: Build Docker Image
-        run: docker build -t iot-app:latest .
-
-      - name: Deploy to Kubernetes
-        run: kubectl apply -f helm-releases/dev.yml
+      - name: Echo step
+        run: echo "🎉 GitHub runner is working!"
