--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build Spring Boot App
-        run: ./mvnw clean package -DskipTests
+        run: .\mvnw.cmd clean package -DskipTests
 
       - name: Build Docker Image
         run: docker build -t iot-app:latest .
