--- a/helm-releases/dev.yml
+++ b/helm-releases/dev.yml
@@ -1,25 +1,34 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: springboot-app
+  name: iot-deployment
   labels:
-    app: springboot
+    app: iot
 spec:
-  containers:
-    - name: springboot-container
-      image: my-springboot-app
-      imagePullPolicy: Never
-      ports:
-        - containerPort: 8080
-      
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iot
+  template:
+    metadata:
+      labels:
+        app: iot
+    spec:
+      containers:
+        - name: iot-container
+          image: iot-app:latest
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 8080
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: springboot-service
+  name: iot-service
 spec:
   selector:
-    app: springboot
+    app: iot
   ports:
     - protocol: TCP
       port: 8080
