--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8083
   error:
     whitelabel:
       enabled: false
@@ -15,7 +15,7 @@ spring:
       matching-strategy: ant_path_matcher
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: host.docker.internal:9092
     consumer:
       group-id: rest-consumer
       auto-offset-reset: latest
