--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: kubectl apply -f helm-releases/dev.yml
+      - name: Restart Kubernetes Deployment
+        run: kubectl rollout restart deployment iot-deployment
+
